# pisnge

./: .gitignore  Cargo.toml  package.json  readme.md
.claude/: settings.local.json
.github/workflows/: release.yml
examples/: average-weekly-storypoint-velocity-per-developer-pie.mmd  burn-up-chart.mmd  cat-activity.mmd  many-open-issues.mmd  open-issues.mmd  remaining-storypoints-by-week.mmd  storypoints-by-status-pie.mmd  work-item-movement.mmd
scripts/: install.js  view.sh
src/: font.rs  lib.rs  main.rs  parser.rs  png.rs  renderer.rs
src/common/: mod.rs  parser.rs  renderer.rs  string_parser.rs
src/pie_chart/: content_parser.rs  mod.rs  parser.rs  renderer.rs
src/work_item_movement/: mod.rs  parser.rs  renderer.rs
src/xychart/: content_parser.rs  mod.rs  parser.rs  renderer.rs
